[gd_scene load_steps=3 format=3 uid="uid://b0detle3gh4di"]

[ext_resource type="Script" uid="uid://ei544nu1vriv" path="res://resource/scripts/gamemode/base/character_select.gd" id="1_char_select"]

[sub_resource type="StyleBoxFlat" id="SubResource_PanelStyle"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_select")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("SubResource_PanelStyle")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterList" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="SkipButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skip (Use First)"

[node name="SelectionAudioPlayer" type="AudioStreamPlayer" parent="."]
